--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+// body {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     height: 100vh;
+  
+//     .page-content {
+//       width: 80%;
+//       max-width: 1200px; // Optional: Set a maximum width for responsiveness
+//     }
+//   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
