--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,1 +1,17 @@
-<p>table works!</p>
+<table class="table">
+    <thead>
+      <tr>
+        <th *ngFor="let column of column">{{ column.name }}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let row of displayedRows">
+        <td *ngFor="let column of column">{{ row[column.field] }}</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="pagination">
+    <button (click)="previousPage()" [disabled]="currentPage === 1">Previous</button>
+    <span>{{ currentPage }}</span>
+    <button (click)="nextPage()" [disabled]="currentPage === totalPages">Next</button>
+  </div>
