--- a/src/app/pages/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/main-page.component.scss
@@ -36,3 +36,26 @@
   flex-wrap: wrap;
   gap: 10px;
 }
+
+.table-session{
+    margin-top: 50px;
+    .gapTable{
+        margin-top: 10px;
+    }
+}
+
+
+
+input[type="text"] {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    width: 200px;
+  }
+  
+  input[type="text"]:focus {
+    outline: none;
+    border-color: blue;
+    box-shadow: 0 0 5px blue;
+  }
