--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -1,11 +1,12 @@
 .table {
     width: 100%;
     border-collapse: collapse;
+    border-radius: 10px;
   
     th {
-      background-color: #f5f5f5;
+      background-color: #d5d2ff;
       border-bottom: 1px solid #ddd;
-      padding: 8px;
+      padding: 10px 8px;
       text-align: left;
     }
   
@@ -15,7 +16,7 @@
     }
   
     tr:nth-child(even) {
-      background-color: #f9f9f9;
+      background-color: #f6f5ff;
     }
   }
   .pagination {
