feat: add chart install chartjs add service of chart add barchart feature

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -20,7 +20,11 @@
                 </div>
             </div>
             <div class="content2">
-                dsadasd
+                <app-bar-chart
+                [chartLabel] = "'Target Vs Created Media'"
+                [label]="this.chart.label" 
+                [value]="this.chart.value"
+                ></app-bar-chart>
             </div>
         </div>
         <div class="table-session">
