--- a/src/app/pages/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/main-page.component.scss
@@ -4,7 +4,7 @@
   max-width: 1116px;
   min-height: calc(100vh - 84px);
 }
-.flex{
+.flex {
   display: flex;
   flex-direction: row;
   gap: 5px;
@@ -81,4 +81,31 @@ select:focus {
   outline: none;
   border-color: #66afe9;
   box-shadow: 0 0 5px rgba(102, 175, 233, 0.5);
+}
+
+
+@media screen and (max-width: 1172px) {
+  // Add your responsive styles here
+  .content1 {
+    width: 100%;
+  }
+
+  .content2 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 461px) {
+  input {
+    width: 50% !important;
+  }
+  // .select-container {
+  //   width: 50% !important;
+  // }
+  select{
+    width: 50% !important;
+  }
+  .main{
+    padding: 0 15px 45px 15px;
+  }
 }
