--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -1,83 +1,88 @@
 .table {
-    width: 100%;
-    border-collapse: collapse;
-    border-radius: 10px;
-  
-    th {
-      background-color: #d5d2ff;
-      border-bottom: 1px solid #ddd;
-      padding: 10px 8px;
-      text-align: left;
-    }
-  
-    td {
-      border-bottom: 1px solid #ddd;
-      padding: 8px;
-    }
-  
-    tr:nth-child(even) {
-      background-color: #f6f5ff;
-    }
-  }
-  .pagination {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 16px;
-  
-    button {
-      background-color: #f5f5f5;
-      color: #333;
-      border: none;
-      border-radius: 4px;
-      padding: 4px 8px;
-      margin: 0 4px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-  
-      &:hover {
-        background-color: #ddd;
-      }
-  
-      &:disabled {
-        opacity: 0.5;
-        cursor: not-allowed;
-      }
-    }
-    .pagination-button {
-      margin-right: 5px;
-      padding: 5px 10px;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      color: #333;
-      cursor: pointer;
-  
-      &:disabled {
-        opacity: 0.5;
-        cursor: default;
-      }
-    }
-  
-    .pagination-info {
-      margin: 0 10px;
-      font-size: 14px;
-    }
-  
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 10px;
 
-      label {
-        margin-right: 5px;
-        font-size: 14px;
-      }
-  
-      select {
-        padding: 5px;
-        font-size: 14px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-    
-    span {
-      font-size: 14px;
-      margin: 0 8px;
+  th {
+    background-color: #d5d2ff;
+    border-bottom: 1px solid #ddd;
+    padding: 10px 8px;
+    text-align: left;
+  }
+
+  td {
+    border-bottom: 1px solid #ddd;
+    padding: 8px;
+  }
+
+  tr:nth-child(even) {
+    background-color: #f6f5ff;
+  }
+}
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 16px;
+
+  button {
+    background-color: #f5f5f5;
+    color: #333;
+    border: none;
+    border-radius: 4px;
+    padding: 4px 8px;
+    margin: 0 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: #ddd;
+    }
+
+    &:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
   }
+  .pagination-button {
+    margin-right: 5px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    color: #333;
+    cursor: pointer;
+
+    &:disabled {
+      opacity: 0.5;
+      cursor: default;
+    }
+  }
+
+  .pagination-info {
+    margin: 0 10px;
+    font-size: 14px;
+  }
+
+  label {
+    margin-right: 5px;
+    font-size: 14px;
+  }
+
+  select {
+    padding: 5px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
+  span {
+    font-size: 14px;
+    margin: 0 8px;
+  }
+}
+@media screen and (max-width: 461px) {
+  .table-container {
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+}
